[main] Update 2025-08-12.23 (#364)
Reference commit: e6ecd83f72